2009-11-08  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm.lisp (main): Add a read-conf-file-p parameter to
	prevent reading the configuration file (this may be useful to
	produce the original documentation without user modifications
	with the rc configuration file).

2009-11-07  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/bindings-second-mode.lisp (set-default-second-keys):
	Simplification of Escape key to close/kill/remove the focus window
	and unhide all windows.

	* src/bindings.lisp (set-default-main-keys): Simplification of
	Escape key to close/kill/remove the focus window and unhide all
	windows.

	* src/clfswm-util.lisp (ask-close/kill-current-window): Add remove
	focus and unhide all windows capabilities.

2009-10-10  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/mpd.lisp (start-gmpc): Add gmpc in the mpd menu.

2009-07-29  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-layout.lisp (tile-layout, tile-horizontal-layout):
	Keep child order and don't make unnecessary child movement.
	(one-column-layout, one-line-layout): New layouts.

2009-06-29  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/cd-player.lisp: New file to handle the CD player.

	* contrib/xmms.lisp: New file to handle the xmms player.

2009-06-28  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-layout.lisp (set-no-layout-remember-size): New layout:
	Maximize windows in there frame - Leave frames to there	actual
	size.

	* src/bindings-second-mode.lisp (set-default-second-keys): Bind
	"o" on set-open-in-new-frame-in-parent-frame-nw-hook.

2009-06-27  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/keyb_fr.lisp: New file to handle an azerty keyboard.

2009-06-24  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/mpd.lisp: Use a standard menu.

	* src/clfswm-info.lisp: Use a standard menu for the help-menu.

2009-06-22  Philippe Brochard  <pbrochard@common-lisp.net>
